force-app/main/default/objects/clofor_com_cfs__Reconcile__c/fields/clofor_com_cfs__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApprovalStatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>