force-app/main/default/objects/clofor_com_cfs__Reconcile__c/fields/clofor_com_cfs__CargoID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cargo ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Cargo__c.clofor_com_cfs__CargoLifeCycle__c</field>
            <operation>notEqual</operation>
            <value>No longer exists</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Cargo__c</referenceTo>
    <relationshipLabel>AUDIT RECONCILE</relationshipLabel>
    <relationshipName>Reconcile</relationshipName>
    <type>Lookup</type>
</CustomField>