force-app/main/default/objects/clofor_com_cfs__Reconcile__c/fields/clofor_com_cfs__DiscrepancyID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DiscrepancyID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discrepancy ID</label>
    <referenceTo>clofor_com_cfs__Discrepancy__c</referenceTo>
    <relationshipLabel>RECONCILE</relationshipLabel>
    <relationshipName>Reconcile</relationshipName>
    <type>Lookup</type>
</CustomField>