force-app/main/default/objects/clofor_com_cfs__Reconcile__c/fields/clofor_com_cfs__ReconcileActionType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReconcileActionType__c</fullName>
    <label>Reconcile Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DiscrepancyAdjustType</valueSetName>
    </valueSet>
</CustomField>