force-app/main/default/objects/clofor_com_cfs__Reconcile__c/fields/clofor_com_cfs__ReconcilePIC__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReconcilePIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconcile P.I.C</label>
    <referenceTo>clofor_com_cfs__WORKER__c</referenceTo>
    <relationshipLabel>RECONCILE</relationshipLabel>
    <relationshipName>Reconcile</relationshipName>
    <type>Lookup</type>
</CustomField>