force-app/main/default/objects/clofor_com_cfs__Reconcile__c/recordTypes/clofor_com_cfs__CargoBaseReconcile.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__CargoBaseReconcile</fullName>
    <active>true</active>
    <label>Cargo Base Reconcile</label>
</RecordType>