force-app/main/default/objects/clofor_com_cfs__Reconcile__c/recordTypes/clofor_com_cfs__ProductBaseReconcile.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ProductBaseReconcile</fullName>
    <active>true</active>
    <label>Product Base Reconcile</label>
</RecordType>