force-app/main/default/objects/clofor_com_cfs__Reconcile__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__AuditID__c</columns>
    <columns>clofor_com_cfs__ProductScopeID__c</columns>
    <columns>clofor_com_cfs__DiscrepancyID__c</columns>
    <columns>clofor_com_cfs__ReconcileActionType__c</columns>
    <columns>clofor_com_cfs__ReconcileActionPlan__c</columns>
    <columns>clofor_com_cfs__ReconcilePIC__c</columns>
    <columns>clofor_com_cfs__ReconcileTargetDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>